--- a/views/src/app/layout/components/header/header.component.html
+++ b/views/src/app/layout/components/header/header.component.html
@@ -13,27 +13,24 @@
                 
             </li> &nbsp;
             <li class="nav-item">
-                <a href="javascript:void(0)" class="nav-link mt-1"
+                <a class="nav-link mt-1"
                     style="padding: 0.375rem 1rem !important; border-color: #999;"
-                    (click)="rltAndLtr()"
                 >
-                    RTL/LTR
-                </a>
-            </li> &nbsp;     
+                    Balance
+            </a>
+            </li> &nbsp;  
+            <li class="nav-item">
+                <a class="nav-link mt-1"
+                    style="padding: 0.375rem 1rem !important; border-color: #999;"
+                >
+                    electricty
+            </a>
+            </li> &nbsp;    
             <li class="nav-item dropdown" ngbDropdown>
                 <a href="javascript:void(0)" class="nav-link" ngbDropdownToggle>
                     <i class="fa fa-user"></i> John Smith <b class="caret"></b>
                 </a>
-                <div class="dropdown-menu dropdown-menu-right">
-                    <a class="dropdown-item" href="javascript:void(0)">
-                        <i class="fa fa-fw fa-user"></i> {{ 'Profile' | translate }}
-                    </a>
-                    <a class="dropdown-item" href="javascript:void(0)">
-                        <i class="fa fa-fw fa-envelope"></i> {{ 'Inbox' | translate }}
-                    </a>
-                    <a class="dropdown-item" href="javascript:void(0)">
-                        <i class="fa fa-fw fa-gear"></i> {{ 'Settings' | translate }}
-                    </a>
+                <div class="dropdown-menu dropdown-menu-right">                   
                     <a class="dropdown-item" [routerLink]="['/login']" (click)="onLoggedout()">
                         <i class="fa fa-fw fa-power-off"></i> {{ 'Log Out' | translate }}
                     </a>
