--- a/views/src/app/layout/components/header/header.component.html
+++ b/views/src/app/layout/components/header/header.component.html
@@ -32,7 +32,7 @@
                 </a>
                 <div class="dropdown-menu dropdown-menu-right">                   
                     <a class="dropdown-item" [routerLink]="['/login']" (click)="onLoggedout()">
-                        <i class="fa fa-fw fa-power-off"></i> {{ 'Log Out' | translate }}
+                        <i class="fa fa-fw fa-power-off"></i> Log Out
                     </a>
                 </div>
             </li>
