--- a/views/src/app/login/login.component.html
+++ b/views/src/app/login/login.component.html
@@ -6,16 +6,10 @@
             <form role="form">
                 <div class="form-content">
                     <div class="form-group">
-                        <input type="text" ng-model="name" class="form-control input-underline input-lg" id="" placeholder="Email">
-                    </div>
-
-                    <div class="form-group">
-                        <input type="password" class="form-control input-underline input-lg" id="" placeholder="Password">
+                        <input #username type="text" ng-model="name" class="form-control input-underline input-lg" id="" placeholder="Username">
                     </div>
                 </div>
                 <a class="btn rounded-btn" [routerLink]="['/history']" (click)="onLoggedin()"> Log in </a>
-                &nbsp;
-                <a class="btn rounded-btn" [routerLink]="['/signup']">Register</a>
             </form>
         </div>
     </div>
