--- a/views/src/app/layout/history/history.component.html
+++ b/views/src/app/layout/history/history.component.html
@@ -6,14 +6,14 @@
                 <div class="row">
                     <div class="col-3">
                         <label>date from :</label>
-                        <input type="date" class="form-control" formControlName="from">
+                        <input type="date" id="from" class="form-control" formControlName="from">
                     </div>
                     <div class="col-3">
                         <label>to :</label>
                         <input type="date" class="form-control" formControlName="to">
                     </div>
                     <div class="col-2">
-                        <input type="submit" class="btn">
+                        <input type="submit" class="btn btn-search">
                     </div>
                 </div>
             </form>
