--- a/views/src/app/layout/components/sidebar/sidebar.component.html
+++ b/views/src/app/layout/components/sidebar/sidebar.component.html
@@ -2,8 +2,8 @@
         <div class="row" style="text-align:center">
                 <div class="col-lg-12">
                         <p style="color:white"><img src="assets/images/logo.png" width="100px" class="user-avatar" style="display:inline-block" /></p>
-                        <p style="color:white">Balance:</p>
-                        <p style="color:white">electricty:</p>
+                        <p style="color:white">Balance: {{balance}} </p>
+                        <p style="color:white">electricty: {{electricity}} </p>
         
                 </div>
         
