--- a/views/src/app/layout/components/sidebar/sidebar.component.html
+++ b/views/src/app/layout/components/sidebar/sidebar.component.html
@@ -3,7 +3,7 @@
                 <div class="col-lg-12">
                         <p style="color:white"><img src="assets/images/logo.png" width="100px" class="user-avatar" style="display:inline-block" /></p>
                         <p style="color:white">Balance: {{balance}} </p>
-                        <p style="color:white">Electricty: {{electricity}} </p>
+                        <p style="color:white">Electricity: {{electricity}} </p>
         
                 </div>
         
