--- a/views/src/app/layout/components/header/header.component.html
+++ b/views/src/app/layout/components/header/header.component.html
@@ -12,7 +12,7 @@
             <li class="nav-item d-none d-xl-block">
 
             </li> &nbsp;
-            <li class="nav-item dropdown" ngbDropdown>
+            <!--<li class="nav-item dropdown" ngbDropdown>
                 <a href="javascript:void(0)" class="nav-link" ngbDropdownToggle>
                     <i class="fa fa-user"></i> {{username}}
                     <b class="caret"></b>
@@ -22,7 +22,7 @@
                         <i class="fa fa-fw fa-power-off"></i> Log Out
                     </a>
                 </div>
-            </li>
+            </li> -->
         </ul>
     </div>
 </nav>
