--- a/views/src/app/layout/components/sidebar/sidebar.component.html
+++ b/views/src/app/layout/components/sidebar/sidebar.component.html
@@ -1,13 +1,20 @@
 <nav class="sidebar" [ngClass]="{sidebarPushRight: isActive}">
-        <div class="row" style="text-align:center">
-                <div class="col-lg-12">
-                        <p style="color:white"><img src="assets/images/logo.png" width="100px" class="user-avatar" style="display:inline-block" /></p>
-                        <p style="color:white">Balance: {{balance}} </p>
-                        <p style="color:white">Electricty: {{electricity}} </p>
-        
-                </div>
-        
-            </div>
+    <div class="row" style="text-align:center;margin-bottom:20px">
+        <div class="col-lg-12">
+            <p style="color:white">
+                <img src="assets/images/logo.png" width="100px" class="user-avatar" style="display:inline-block" />
+            </p>
+            <p style="color:white">{{username}}</p>
+            <p style="color:white">Balance: {{balance}} </p>
+            <p style="color:white">Electricty: {{electricity}} </p>
+            <a [routerLink]="['/login']" (click)="onLoggedout()" class="nav-link btn mt-1" role="button"
+                style="padding: .375rem 1rem !important;border-color: #999;">
+                Logout
+            </a>
+
+        </div>
+
+    </div>
     <div class="list-group">
         <a routerLink="/history" [routerLinkActive]="['router-link-active']" class="list-group-item">
             <i class="fa fa-fw fa-clock-o"></i>&nbsp;History
@@ -17,6 +24,6 @@
         </a>
         <a routerLink="/sell" [routerLinkActive]="['router-link-active']" class="list-group-item">
             <i class="fa fa-fw fa-dollar"></i>&nbsp;Sell
-        </a>       
+        </a>
     </div>
 </nav>
