--- a/views/src/app/layout/components/sidebar/sidebar.component.html
+++ b/views/src/app/layout/components/sidebar/sidebar.component.html
@@ -7,8 +7,8 @@
             <p style="color:white">{{username}}</p>
             <p style="color:white">Balance: {{balance}} </p>
             <p style="color:white">Electricity: {{electricity}} </p>
-            <a [routerLink]="['/login']" (click)="onLoggedout()" class="nav-link btn mt-1" role="button"
-                style="padding: .375rem 1rem !important;border-color: #999;">
+            <a [routerLink]="['/login']" (click)="onLoggedout()" class="nav-link btn mt-1"
+                role="button" style="padding: .375rem 1rem !important;border-color: #999;display:inline-block; width:100px;">
                 Logout
             </a>
 
