--- a/views/src/app/layout/history/history.component.html
+++ b/views/src/app/layout/history/history.component.html
@@ -32,7 +32,7 @@
                         <th>Amount</th>
                     </tr>
                 </thead>
-                <tbody>
+                <tbody *ngIf="historys">
                     <tr *ngFor="let history of historys; let i = index ">
                         <td>{{history.primaryid}}</td>
                         <td>{{history.secondaryid}}</td>
